--- a/app/src/main/res/layout/live_room_activity.xml
+++ b/app/src/main/res/layout/live_room_activity.xml
@@ -4,12 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/local_view_container"
+    <TextureView
+        android:id="@+id/local_preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </FrameLayout>
-    
+        android:layout_height="match_parent"/>
+
     <FrameLayout
         android:id="@+id/remote_view_container"
         android:layout_width="@dimen/remote_view_width"
@@ -19,4 +18,16 @@
         android:layout_marginTop="@dimen/remote_view_margin"
         android:layout_marginEnd="@dimen/remote_view_margin">
     </FrameLayout>
+    <RelativeLayout
+        android:id="@+id/controller_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/transparent">
+        <ImageButton
+            android:id="@+id/btn_mute_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_lock_silent_mode_off"/>
+    </RelativeLayout>
 </RelativeLayout>
