switch camera, better camera life cycle, fix preview buffer size

--- a/app/src/main/res/layout/live_room_activity.xml
+++ b/app/src/main/res/layout/live_room_activity.xml
@@ -6,8 +6,8 @@
 
     <TextureView
         android:id="@+id/local_preview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="@dimen/local_preview_width"
+        android:layout_height="@dimen/local_preview_height"/>
 
     <FrameLayout
         android:id="@+id/remote_view_container"
@@ -25,7 +25,7 @@
         android:layout_alignParentBottom="true"
         android:background="@android:color/transparent">
         <ImageButton
-            android:id="@+id/btn_mute_state"
+            android:id="@+id/btn_switch_camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_lock_silent_mode_off"/>
