--- a/app/src/main/res/layout/live_room_activity.xml
+++ b/app/src/main/res/layout/live_room_activity.xml
@@ -18,16 +18,36 @@
         android:layout_marginTop="@dimen/remote_view_margin"
         android:layout_marginEnd="@dimen/remote_view_margin">
     </FrameLayout>
+
     <RelativeLayout
         android:id="@+id/controller_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@android:color/transparent">
-        <ImageButton
+        <Button
             android:id="@+id/btn_switch_camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_lock_silent_mode_off"/>
+            android:layout_alignParentStart="true"
+            android:text="@string/btn_switch_camera"/>
+        <Button
+            android:id="@+id/btn_pause_preview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/btn_switch_camera"
+            android:text="@string/btn_pause_capture"/>
+        <Button
+            android:id="@+id/btn_resume_preview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/btn_pause_preview"
+            android:text="@string/btn_resume_capture"/>
+        <Button
+            android:id="@+id/btn_stop_preview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/btn_resume_preview"
+            android:text="@string/btn_stop_capture"/>
     </RelativeLayout>
 </RelativeLayout>
