--- a/app/src/main/res/layout/live_room_activity.xml
+++ b/app/src/main/res/layout/live_room_activity.xml
@@ -6,8 +6,8 @@
 
     <TextureView
         android:id="@+id/local_preview"
-        android:layout_width="@dimen/local_preview_width"
-        android:layout_height="@dimen/local_preview_height"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <FrameLayout
         android:id="@+id/remote_view_container"
