--- a/app/src/main/res/layout/live_room_activity.xml
+++ b/app/src/main/res/layout/live_room_activity.xml
@@ -14,6 +14,13 @@
             android:layout_height="match_parent"/>
     </FrameLayout>
 
+    <TextView
+        android:id="@+id/fps_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"/>
+
     <FrameLayout
         android:id="@+id/remote_view_container"
         android:layout_width="@dimen/remote_view_width"
